--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -33,16 +33,16 @@
   box-shadow: inset 0px -1px 1px 1px #fcbf49;
 }
 .calculator-display-message {
-  font-size: 30px;
   color: #ffb700;
   margin-right: 15px;
+  font-size: 25px;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 10px;
 }
-.calculator-display-message-history {
-  font-size: 20px;
+.calculator-full-message {
+  font-size: 15px;
   color: red;
   margin-right: 15px;
 }
@@ -60,7 +60,7 @@
   height: 70px;
 }
 #first-row {
-  grid-template-columns: 3.2fr 1fr;
+  grid-template-columns: 2.2fr 1fr 1fr;
 }
 #second-row {
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -81,12 +81,6 @@
 #clear:active {
   background-color: #c71e08;
 }
-#equals {
-  background-color: #ffb700;
-}
-#equals:active {
-  background-color: #03045e;
-}
 
 .calculator-button {
   background-color: #a8dadc;
@@ -97,7 +91,7 @@
   border-radius: 5px;
   border: none;
   font-family: "Orbitron", sans-serif;
-  font-size: 20px;
+  font-size: 25px;
   cursor: pointer;
   transition-duration: 0.1s;
 }
@@ -108,12 +102,12 @@
   color: white;
 }
 .operators {
-  background-color: #ffb700;
+  background-color: #fcbf49;
 }
 .operators:active {
   background-color: #03045e;
 }
-@med @media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   .calculator-container {
     width: 350px;
   }
