--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,19 @@
   animation-duration: 4s;
   animation-iteration-count: infinite;
 }
-.created-by-message {
+
+.github-link {
+  background-image: url("https://image.flaticon.com/icons/png/512/25/25231.png");
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  background-size: 100%;
+  filter: invert(89%) sepia(23%) saturate(3774%) hue-rotate(340deg)
+    brightness(101%) contrast(101%);
   margin-top: 20px;
-  color: white;
+}
+.github-link:hover {
+  filter: none;
 }
 @media only screen and (max-width: 768px) {
   .calculator-heading {
